--- a/icehockey_ServerV3/WebContent/views/page/hobbySelectSnow.html
+++ b/icehockey_ServerV3/WebContent/views/page/hobbySelectSnow.html
@@ -4,28 +4,38 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link rel="stylesheet" href="../../css/pageCss/hobbySelectSnow.css" />
+		<link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css" />
+		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
 		<title></title>
 	</head>
 
 	
 	<body class="hobby_body">
-		<div class="hobby_select_snow_top">
-			<a href="hobbyChoose.html"></a>
-			<span>请选择雪上运动项目</span>
-		</div>
-		<div class="hobby_bottom">
-			<div class="hobby_select_snow_div">
-				<img src="../../images/hobbyChoose/danban.png" />
-				<span>我是玩单板的</span>
-			</div>	
-			<div class="hobby_select_snow_div">
-				<img src="../../images/hobbyChoose/shuangban.png" />
-				<span>我是玩双板的</span>
-			</div>	
-			<div class="hobby_select_snow_div">
-				<img src="../../images/hobbyChoose/douwan.png" />
-				<span>我单双板都玩</span>
+		<div data-role="page" >
+			<div data-role="content">
+				<div class="hobby_select_snow_top">
+					<a href="hobbyChoose.html"></a>
+					<span>请选择雪上运动项目</span>
+				</div>
+				<div class="hobby_bottom">
+					<div class="hobby_select_snow_div">
+						<img src="../../images/hobbyChoose/danban.png"  id="danban"/>
+						<span>我是玩单板的</span>
+					</div>	
+					<div class="hobby_select_snow_div">
+						<img src="../../images/hobbyChoose/shuangban.png" id="shuangban"/>
+						<span>我是玩双板的</span>
+					</div>	
+					<div class="hobby_select_snow_div">
+						<img src="../../images/hobbyChoose/douwan.png" id="all" />
+						<span>我单双板都玩</span>
+					</div>	
+				</div>
 			</div>	
 		</div>
 	</body>
+	<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
+	<script src="../../js/urlApi/api.js"></script>
+	<script src="../../js/common/common.js" type="text/javascript"></script>
+	<script src="../../js/pageJS/hobbySelectSnow.js" type="text/javascript"></script>
 </html>
