--- a/icehockey_ServerV3/WebContent/css/login/logining.css
+++ b/icehockey_ServerV3/WebContent/css/login/logining.css
@@ -1,36 +1,30 @@
 @charset "utf-8";
+body{background:url(../../images/login.png) center center no-repeat;
+	background-size:cover;}
 
-body {
-	background: url(../../images/login.png) center center no-repeat;
-	background-size: cover;
-}
 
-.footer {
-	position: fixed;
-	left: 0;
-	bottom: 0;
-}
+.footer{
+	position:fixed;
+left:0;
+bottom:0;}
 
-.footer a {
+.footer a{
 	display: block;
-	width: 100%;
-	height: 3rem;
-	background: #60932e;
-	border-radius: 1rem;
-	text-align: center;
-	line-height: 3rem;
-	color: #fff;
-	margin-bottom: 2rem;
-}
+	width:100%;
+	height:3rem;
+	background:#60932e;border-radius:1rem;
+    text-align: center;line-height:3rem;
+    color:#fff;
+    margin-bottom:2rem;}
+    
+.footer a.other{
+	background:#0c0c0c!important;}
 
-.footer a.other {
-	background: #0c0c0c !important;
-}
 
 /*跳转页样式*/
-.wait {
-	width: 100%;
-	height: 100%;
-	background: url(../../images/wait.png) center center no-repeat;
-	background-size: cover;
-}
+.wait{
+	width:100%;
+	height:100%;
+	background:url(../../images/wait.png) center center no-repeat;
+	background-size:cover;
+	}
