--- a/icehockey_ServerV3/WebContent/views/page/hobbyChoose.html
+++ b/icehockey_ServerV3/WebContent/views/page/hobbyChoose.html
@@ -5,27 +5,38 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
 		<link rel="stylesheet" href="../../css/pageCss/hobbyChoose.css" />
-	</head>
-	<body class="hobby_body">
-		<div class="hobbychoose_top">
+		<link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css" />
+		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
 			
-			<span>请选择你的爱好</span>
+			
+	</head>
+	
+	<body class="hobby_body">
+		<div data-role="page" >
+			<div data-role="content">
+				<div class="hobbychoose_top">
+					
+					<span>请选择你的爱好</span>
+				</div>
+				<div class="hobby_bottom">
+					<div class="hobby_choose_div">
+						<img src="../../images/hobbyChoose/playice.png" id="playice"/>
+						<span>我是玩冰的</span>
+					</div>	
+					<div class="hobby_choose_div">
+						<img src="../../images/hobbyChoose/playsnow.png" id="playsnow"/> 
+						<span>我是玩雪的</span>
+					</div>	
+					<div class="hobby_choose_div">
+						<img src="../../images/hobbyChoose/playicesnow.png" id="playboth"/>
+						<span>我冰雪都玩</span>
+					</div>	
+				</div>
+			</div>
 		</div>
-		<div class="hobby_bottom">
-			<div class="hobby_choose_div">
-				<img src="../../images/hobbyChoose/playice.png" id="playice"/>
-				<span>我是玩冰的</span>
-			</div>	
-			<div class="hobby_choose_div">
-				<img src="../../images/hobbyChoose/playsnow.png" />
-				<span>我是玩雪的</span>
-			</div>	
-			<div class="hobby_choose_div">
-				<img src="../../images/hobbyChoose/playicesnow.png" />
-				<span>我冰雪都玩</span>
-			</div>	
-		</div>
-		<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
-		<script src="../../js/hobby/hobbyChoose.js" type="text/javascript"></script>
+		
 	</body>
+	<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
+
+		<script src="../../js/pageJS/hobbyChoose.js" type="text/javascript"></script>
 </html>
