--- a/icehockey_ServerV3/WebContent/views/page/hobbySelectIce.html
+++ b/icehockey_ServerV3/WebContent/views/page/hobbySelectIce.html
@@ -6,38 +6,44 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
 		<link rel="stylesheet" href="../../css/pageCss/hobbySelectIce.css" />
-	
+       <link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css" />
+		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
 	</head>
 	
 	<body class="hobby_body">
-		<div class="hobbyselect_top">
-			<span>请选择你的冰上运动项目</span>
-			<a href="hobbyChoose.html"></a>
-		</div>
-		<div class="hobby_select">
-			<div>
-				<div class="left_hobby_select_div">
-					<img src="../../images/hobbyChoose/bingqiu.png" id="bingqiu"/>
-					<span>冰球</span>
-				</div>	
-				<div class="left_hobby_select_div">
-					<img src="../../images/hobbyChoose/huayang.png" id="huayang"/>
-					<span>花样</span>
-				</div>	
-			</div>
-			<div>
-				<div class="right_hobby_select_div">
-					<img src="../../images/hobbyChoose/suhua.png" id="suhua"/>
-					<span>速滑</span>
-				</div>	
-					<div class="right_hobby_select_div">
-					<img src="../../images/hobbyChoose/binghu.png" id="binghu"/>
-					<span>冰壶</span>
+		<div data-role="page" >
+			<div data-role="content">
+				<div class="hobbyselect_top">
+					<span>请选择你的冰上运动项目</span>
+					<a href="hobbyChoose.html"></a>
+				</div>
+				<div class="hobby_select">
+					<div>
+						<div class="left_hobby_select_div">
+							<img src="../../images/hobbyChoose/bingqiu.png" id="bingqiu"/>
+							<span>冰球</span>
+						</div>	
+						<div class="left_hobby_select_div">
+							<img src="../../images/hobbyChoose/huayang.png" id="huayang"/>
+							<span>花样</span>
+						</div>	
+					</div>
+					<div>
+						<div class="right_hobby_select_div">
+							<img src="../../images/hobbyChoose/suhua.png" id="suhua"/>
+							<span>速滑</span>
+						</div>	
+							<div class="right_hobby_select_div">
+							<img src="../../images/hobbyChoose/binghu.png" id="binghu"/>
+							<span>冰壶</span>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
 		<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
+		<script src="../../js/urlApi/api.js"></script>
 		<script src="../../js/common/common.js" type="text/javascript"></script>
-		<script src="../../js/hobby/hobbySelectIce.js" type="text/javascript"></script>
+		<script src="../../js/pageJS/hobbySelectIce.js" type="text/javascript"></script>
 	</body>
 </html>
