--- a/icehockey_ServerV3/WebContent/views/page/hobbyChoose.html
+++ b/icehockey_ServerV3/WebContent/views/page/hobbyChoose.html
@@ -5,15 +5,17 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
 		<link rel="stylesheet" href="../../css/pageCss/hobbyChoose.css" />
+		<!-- <script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script> 
 		<link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css" />
-		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
+		-->
+		
+	
 			
 			
 	</head>
 	
 	<body class="hobby_body">
-		<div data-role="page" >
-			<div data-role="content">
+		
 				<div class="hobbychoose_top">
 					
 					<span>请选择你的爱好</span>
@@ -32,10 +34,10 @@
 						<span>我冰雪都玩</span>
 					</div>	
 				</div>
-			</div>
-		</div>
+
 		
 	</body>
+
 	<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
 
 		<script src="../../js/pageJS/hobbyChoose.js" type="text/javascript"></script>
