--- a/icehockey_ServerV3/WebContent/views/page/hobbySelectIce.html
+++ b/icehockey_ServerV3/WebContent/views/page/hobbySelectIce.html
@@ -6,13 +6,13 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<title></title>
 		<link rel="stylesheet" href="../../css/pageCss/hobbySelectIce.css" />
-       <link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css" />
-		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
+		<!--    <link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css" />
+		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>-->
+     
 	</head>
 	
 	<body class="hobby_body">
-		<div data-role="page" >
-			<div data-role="content">
+		
 				<div class="hobbyselect_top">
 					<span>请选择你的冰上运动项目</span>
 					<a href="hobbyChoose.html"></a>
@@ -39,8 +39,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
+	
 		<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
 		<script src="../../js/urlApi/api.js"></script>
 		<script src="../../js/common/common.js" type="text/javascript"></script>
