--- a/icehockey_ServerV3/WebContent/views/page/hobbyChoose.html
+++ b/icehockey_ServerV3/WebContent/views/page/hobbyChoose.html
@@ -15,6 +15,21 @@
 	</head>
 	
 	<body class="hobby_body">
+		<script>
+			(function(doc, win) {
+				var docEl = doc.documentElement,
+					resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize',
+					recalc = function() {
+						var clientWidth = docEl.clientWidth;
+						if(!clientWidth) return;
+						docEl.style.fontSize = 16 * (clientWidth / 720) + 'px';
+					};
+
+				if(!doc.addEventListener) return;
+				win.addEventListener(resizeEvt, recalc, false);
+				doc.addEventListener('DOMContentLoaded', recalc, false);
+			})(document, window);
+		</script>
 		
 				<div class="hobbychoose_top">
 					
