--- a/icehockey_ServerV3/WebContent/views/page/hobbyChoose.html
+++ b/icehockey_ServerV3/WebContent/views/page/hobbyChoose.html
@@ -54,6 +54,7 @@
 	</body>
 
 	<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
-
-		<script src="../../js/pageJS/hobbyChoose.js" type="text/javascript"></script>
+    <script src="../../js/urlApi/api.js"></script>
+    <script src="../../js/common/common.js" type="text/javascript"></script>
+	<script src="../../js/pageJS/hobbyChoose.js" type="text/javascript"></script>
 </html>
