--- a/icehockey_ServerV3/WebContent/views/page/hobbyChoose.html
+++ b/icehockey_ServerV3/WebContent/views/page/hobbyChoose.html
@@ -6,13 +6,12 @@
 		<title></title>
 		<link rel="stylesheet" href="../../css/pageCss/hobbyChoose.css" />
 		<link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css" />
+			<script src="../../js/jQuery/jquery-2.2.3.min.js" ></script>	
 		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
-			
-			
-	</head>
 	
+	</head>
 	<body class="hobby_body">
-		<div data-role="page" >
+		<div data-role="page" class="main"> 
 			<div data-role="content">
 				<div class="hobbychoose_top">
 					
@@ -36,7 +35,7 @@
 		</div>
 		
 	</body>
-	<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
-
+		<script src="../../js/urlApi/api.js"></script>
+		<script src="../../js/common/common.js" type="text/javascript"></script>
 		<script src="../../js/pageJS/hobbyChoose.js" type="text/javascript"></script>
 </html>
