--- a/icehockey_ServerV3/WebContent/views/page/hobbySelectIce.html
+++ b/icehockey_ServerV3/WebContent/views/page/hobbySelectIce.html
@@ -7,15 +7,16 @@
 		<title></title>
 		<link rel="stylesheet" href="../../css/pageCss/hobbySelectIce.css" />
        <link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css" />
+       <script src="../../js/jQuery/jquery-2.2.3.min.js" ></script>
 		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
 	</head>
 	
 	<body class="hobby_body">
-		<div data-role="page" >
+		<div data-role="page"  class="main">
 			<div data-role="content">
 				<div class="hobbyselect_top">
 					<span>请选择你的冰上运动项目</span>
-					<a href="hobbyChoose.html"></a>
+					<a href="hobbyChoose.html" data-ajax="false"></a>
 				</div>
 				<div class="hobby_select">
 					<div>
@@ -41,7 +42,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
+		
 		<script src="../../js/urlApi/api.js"></script>
 		<script src="../../js/common/common.js" type="text/javascript"></script>
 		<script src="../../js/pageJS/hobbySelectIce.js" type="text/javascript"></script>
