--- a/icehockey_ServerV3/WebContent/views/page/hobbySelectSnow.html
+++ b/icehockey_ServerV3/WebContent/views/page/hobbySelectSnow.html
@@ -5,16 +5,17 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link rel="stylesheet" href="../../css/pageCss/hobbySelectSnow.css" />
 		<link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css" />
+		<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
 		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
 		<title></title>
 	</head>
 
 	
 	<body class="hobby_body">
-		<div data-role="page" >
+		<div data-role="page" class="main">
 			<div data-role="content">
 				<div class="hobby_select_snow_top">
-					<a href="hobbyChoose.html"></a>
+					<a href="hobbyChoose.html" ></a>
 					<span>请选择雪上运动项目</span>
 				</div>
 				<div class="hobby_bottom">
@@ -34,7 +35,7 @@
 			</div>	
 		</div>
 	</body>
-	<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
+
 	<script src="../../js/urlApi/api.js"></script>
 	<script src="../../js/common/common.js" type="text/javascript"></script>
 	<script src="../../js/pageJS/hobbySelectSnow.js" type="text/javascript"></script>
