--- a/icehockey_ServerV3/WebContent/views/roleChoose/role.html
+++ b/icehockey_ServerV3/WebContent/views/roleChoose/role.html
@@ -59,5 +59,5 @@
 	
 	<script src="../../js/urlApi/api.js"></script>
 	<script src="../../js/common/common.js" type="text/javascript"></script>
-	<script src="../../js/roleChoose/rool.js"></script>
+	<script src="../../js/roleChoose/role.js"></script>
 </html>
