更爱PageCss以及所有包含<a>的页面

--- a/icehockey_ServerV3/WebContent/views/error.html
+++ b/icehockey_ServerV3/WebContent/views/error.html
@@ -30,7 +30,7 @@
     <div class="app">
         <section class="box">
             <header class="login-header">
-                <a href="../views/login.html"></a>
+               <a href="#" onClick="javascript :history.back(-1);" data-ajax="false"></a>
                 <span>登录遇到问题</span>
             </header>
             <section class="content-error">
