--- a/icehockey_ServerV3/WebContent/views/login.html
+++ b/icehockey_ServerV3/WebContent/views/login.html
@@ -34,7 +34,7 @@
 	<div id="app">
 		<section class="box">
 			<header class="login-header">
-				<a href="../logining.html"></a> <span>账号登录</span>
+				<a href="#" onClick="javascript :history.back(-1);" data-ajax="false"></a>
 			</header>
 			<section class="login-input">
 				<div class="input-group">
