--- a/icehockey_ServerV3/WebContent/views/mainUpPage/hujvzhuangbei.html
+++ b/icehockey_ServerV3/WebContent/views/mainUpPage/hujvzhuangbei.html
@@ -7,7 +7,7 @@
 	</head>
 	<body class=hujvzhuangbei_body>
 		<div class="hujvzhuangbei">
-			<a href="../main.html"><img src="../../images/back.png"/></a>
+			<a href="#" onClick="javascript :history.back(-1);" data-ajax="false"><img src="../../images/back.png"/></a>
 			<span>护具装备</span>
 		</div>
 	</body>
