--- a/icehockey_ServerV3/WebContent/views/mainUpPage/jiaoxueziliao.html
+++ b/icehockey_ServerV3/WebContent/views/mainUpPage/jiaoxueziliao.html
@@ -7,7 +7,7 @@
 	</head>
 	<body class=jiaoxueziliao_body>
 		<div class="jiaoxueziliao">
-			<a href="../main.html"><img src="../../images/back.png"/></a>
+			<a href="#" onClick="javascript :history.back(-1);" data-ajax="false"><img src="../../images/back.png"/></a>
 			<span>教学资料</span>
 		</div>
 	</body>
