--- a/icehockey_ServerV3/WebContent/views/mainUpPage/jishutongji.html
+++ b/icehockey_ServerV3/WebContent/views/mainUpPage/jishutongji.html
@@ -7,7 +7,7 @@
 	</head>
 	<body class=jishutongji_body>
 		<div class="jishutongji">
-			<a href="../main.html"><img src="../../images/back.png"/></a>
+			<a href="#" onClick="javascript :history.back(-1);" data-ajax="false"></a>
 			<span>技术统计</span>
 		</div>
 	</body>
