--- a/icehockey_ServerV3/WebContent/views/mainUpPage/my2016.html
+++ b/icehockey_ServerV3/WebContent/views/mainUpPage/my2016.html
@@ -7,7 +7,7 @@
 	</head>
 	<body class=my2016_body>
 		<div class="my2016">
-			<a href="../main.html"><img src="../../images/back.png"/></a>
+			<a href="#" onClick="javascript :history.back(-1);" data-ajax="false"><img src="../../images/back.png"/></a>
 			<span>我的2016</span>
 		</div>
 	</body>
