--- a/icehockey_ServerV3/WebContent/views/mainUpPage/saishizixun.html
+++ b/icehockey_ServerV3/WebContent/views/mainUpPage/saishizixun.html
@@ -7,7 +7,7 @@
 	</head>
 	<body class=saishizixun_body>
 		<div class="saishizixun">
-			<a href="../main.html"><img src="../../images/back.png"/></a>
+			<a href="#" onClick="javascript :history.back(-1);" data-ajax="false"><img src="../../images/back.png"/></a>
 			<span>赛事资讯</span>
 		</div>
 	</body>
