--- a/icehockey_ServerV3/WebContent/views/page/hobbySelectIce.html
+++ b/icehockey_ServerV3/WebContent/views/page/hobbySelectIce.html
@@ -16,7 +16,7 @@
 			<div data-role="content">
 				<div class="hobbyselect_top">
 					<span>请选择你的冰上运动项目</span>
-					<a href="hobbyChoose.html" data-ajax="false"></a>
+					<a href="#" onClick="javascript :history.back(-1);" data-ajax="false"></a>
 				</div>
 				<div class="hobby_select">
 					<div>
