--- a/icehockey_ServerV3/WebContent/views/roleChoose/team.html
+++ b/icehockey_ServerV3/WebContent/views/roleChoose/team.html
@@ -12,16 +12,13 @@
 	<body class="team_body">
 		<div data-role="page" class="main">
 			<div data-role="content">
-		<div class=top>
-			<a href="role.html" data-ajax="false"><img src="../../images/back.png"/></a>
-			<span>协会</span>
-		</div>
-		
-		<div>
+				<div class=top>
+					<a href="#" onClick="javascript :history.back(-1);" data-ajax="false"><img src="../../images/back.png"/></a>
+					<span>协会</span>
 				</div>
 		
-		<div>
-			
+			</div>
 		</div>
+		
 	</body>
 </html>
