--- a/icehockey_ServerV3/WebContent/css/pageCss/hobbyChoose.css
+++ b/icehockey_ServerV3/WebContent/css/pageCss/hobbyChoose.css
@@ -1,17 +1,36 @@
-.hobby_body{
-	background-image: url(../../images/hobbyChoose/lock-screen-background.png);
+.main{
+	background-color: transparent;
+	text-shadow:none !important;
+	background-image: url(../../images/hobbyChoose/lock-screen-background.png)!important;
 	background-size: 100% 100%;
 	height: 100%;
 	margin: 0 !important;
 	display: flex;
 	flex-direction: column;
 	-webkit-flex-direction: column;
+	display:block!important;
+	background-color: transparent;
+
+}
+
+.hobby_body{
+	
+	
+	background-size: 100% 100%;
+	height: 100%;
+	margin: 0 !important;
+	display: flex;
+	flex-direction: column;
+	-webkit-flex-direction: column;
+	display:block!important;
+	background-color: transparent;
+	
 }
 .hobbychoose_top{
 	color: rgb(178,196,202);
 	text-align: center;
-	font-size: 1.6rem;
-	padding: 2rem 0;
+	font-size: 1.4rem;
+	padding: 1rem 0;
 }
 .hobby_bottom{
 	display: flex;
@@ -27,6 +46,7 @@
 	align-items: center;
 	-webkit-align-items: center;
 	text-align: center;
+	margin: 1rem;
 }
 .hobby_choose_div img{
 	width: 30%;
