--- a/icehockey_ServerV3/WebContent/css/pageCss/hobbySelectSnow.css
+++ b/icehockey_ServerV3/WebContent/css/pageCss/hobbySelectSnow.css
@@ -2,32 +2,39 @@
 	height: 100%;
 }
 
-.hobby_body{
-	background-image: url(../../images/hobbyChoose/lock-screen-background.png);
+.main{
+	background-color: transparent;
+	text-shadow:none !important;
+	background-image: url(../../images/hobbyChoose/lock-screen-background.png)!important;
 	background-size: 100% 100%;
 	height: 100%;
 	margin: 0 !important;
 	display: flex;
 	flex-direction: column;
 	-webkit-flex-direction: column;
+	display:block!important;
+	background-color: transparent;
+
 }
+
 .hobby_select_snow_top{
 	color: rgb(178,196,202);
 	text-align: center;
-	font-size: 1.6rem;
-	padding: 2rem 0;
+	font-size: 1.4rem;
+	padding: 1rem 0;
 }
 .hobbyselect_top a{
 	  display: block;
 	  width: 1.1rem;
-	  height: 1.7rem;
+	  height: 1 rem;
 	  background: url(../../images/back.png) no-repeat;
 	  float: left;	
+	  padding: 1rem 0;
 }
 .hobby_select_snow_top a {
   display: block;
   width: 1.1rem;
-  height: 1.7rem;
+  height: 1.4rem;
   background: url(../../images/back.png) no-repeat;
   float: left;
 }
