--- a/icehockey_ServerV3/WebContent/views/mainUpPage/jiaobingbibai.html
+++ b/icehockey_ServerV3/WebContent/views/mainUpPage/jiaobingbibai.html
@@ -7,7 +7,7 @@
 	</head>
 	<body class=jiaobingbibai_body>
 		<div class="jiaobingbibai">
-			<a href="../main.html"><img src="../../images/back.png"/></a>
+			<a href="#" onClick="javascript :history.back(-1);" data-ajax="false"><img src="../../images/back.png"/></a>
 			<span>浇冰必拜</span>
 		</div>
 	</body>
