--- a/icehockey_ServerV3/WebContent/views/roleChoose/school.html
+++ b/icehockey_ServerV3/WebContent/views/roleChoose/school.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
-		<link rel="stylesheet" href="../../css/roleChoose/school.css"/>
+		<link rel="stylesheet" href="../../css/roleChoose/team.css"/>
 		<script src="../../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
 		<link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css" />
 		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js" type="text/javascript"></script>
@@ -12,15 +12,13 @@
 	<body class="team_body">
 		<div data-role="page" class="main">
 			<div data-role="content">
-		<div class=top>
-			<a href="role.html"  data-ajax="false"><img src="../../images/back.png"/></a>
-			<span>学校</span>
+				<div class=top>
+					<a href="#" onClick="javascript :history.back(-1);" data-ajax="false"><img src="../../images/back.png"/></a>
+					<span>学校</span>
+				</div>
+		
+			</div>
 		</div>
 		
-		<div>
-			 	</div>
-		
-		<div>
-		</div>
 	</body>
 </html>
