--- a/icehockey_ServerV3/WebContent/views/bxy/manWeight.html
+++ b/icehockey_ServerV3/WebContent/views/bxy/manWeight.html
@@ -28,7 +28,7 @@
 					<img src="../../images/bxy/man.png" />
 				</div>
 				
-		<form method="post" action="demoform.asp">
+		<form method="post" action=".asp">
  	     	<div data-role="fieldcontain">
     	    	<label for="points">体重KG:</label>
         		<input type="range" name="points" id="points" value="60" min="30" max="100">
