--- a/icehockey_ServerV3/WebContent/views/bxy/gender.html
+++ b/icehockey_ServerV3/WebContent/views/bxy/gender.html
@@ -27,6 +27,7 @@
 				</div>
 				
 				<!--性别单选按钮作为表单提交，action暂时为空。-->
+				
 				<form id="gender" action="#" method="post" align="center">   
 		        	<fieldset data-role="controlgroup">  
 		        		<div  class="man">
@@ -42,28 +43,16 @@
 		                </div>        	
 		        	</fieldset>  
 		       </form>      
-				<!-- 
-				<div  class="man" align="center">
-					<a href="manWeight.html" data-rel="external" data-transition="pop">  
-						<img src="../../images/bxy/man.png"/>
-					</a>
-				</div>
-				<div  class="lady" align="center"> 
-					<a href="ladyWeight.html" data-rel="external" data-transition="slide">
-						<img src="../../images/bxy/lady.png"/>
-					</a>
-				</div>
-				 -->
 			</div>
 		</div>
-		<!--单击头像选择性别，同时触发事件跳转页面-->
+<!--单击头像选择性别，同时触发事件跳转页面-->
 		<script>
 			function male(){
-				window.location.href ="Weight.html";
+				window.location.href ="manWeight.html";
 			}
 			
 			function female(){
-				window.location.href ="Weight.html";
+				window.location.href ="ladyWeight.html";
 			}
 		</script>
 	</body>
