修改部分代码

--- a/icehockey_ServerV3/WebContent/css/bxy/gender.css
+++ b/icehockey_ServerV3/WebContent/css/bxy/gender.css
@@ -1,13 +1,14 @@
 @charset "utf-8";
 
-.male{
+.man{
 	position:absolutoin;
-	align:center;
+	align : center;
 	display: block;
 	padding-top:15%;
 }
 
-.female{
+.lady{
 	position:absolutoin;
+	display: block;
 	padding-top:25%;
 }
