--- a/icehockey_ServerV3/WebContent/views/bxy/gender.html
+++ b/icehockey_ServerV3/WebContent/views/bxy/gender.html
@@ -12,8 +12,6 @@
 		<link rel="stylesheet" href="../../css/jqueryMobile/jquery.mobile-1.4.5.min.css"/>
 		<script src="../../js/jQuery/jquery-2.2.3.min.js"></script>
 		<script src="../../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
-		
-		<script src="../../js/bxy/gender.js"></script>
 	</head>
 		
 	<body >	
@@ -26,16 +24,26 @@
 					</p>
 				</div>
 				
-				<!--性别单选按钮作为表单提交，action暂时为空。-->
+				<!--
+					性别单选按钮作为表单提交，action暂时为空
+					这里可以不用js提交数据，直接使用action调用jsp。
+				-->
 				
 				<form id="gender" action="#" method="post" align="center">   
-		        	<fieldset data-role="controlgroup">  
+		        	<fieldset data-role="controlgroup"> 
+		        		<!--
+                        	“男生”按钮，有onclick事件进行页面跳转。
+                        	male()函数跳转页面。
+                        -->
 		        		<div  class="man">
 		            	 <label for="man" class="ui-hidden-accessible">男</label>
 		            	<input type="image" name="man" id="male" value="male"  checked="checked" 
 		            		src="../../images/bxy/man.png" onclick="male()"/>  
 		  				</div>
 		  				
+		  				<!--
+                        	“女生”按钮
+                        -->
 		  				<div class="lady">
 		                 <label for="lady" class="ui-hidden-accessible">女</label>
 		            	<input type="image" name="lady" id="female" value="female" 
