--- a/icehockey_ServerV3/WebContent/views/bxy/ladyHeight.html
+++ b/icehockey_ServerV3/WebContent/views/bxy/ladyHeight.html
@@ -31,12 +31,15 @@
 				</div>
 					
 				<div class="ui-block-b">
-					<form method="post" action="height.asp">
+					<!--
+                    	jsp为空。
+                    -->
+					<form method="post" action=".jsp">
  	     				<div data-role="fieldcontain">
     	    				<label for="points">身高cm:</label>
         					<input type="range" name="points" id="points" value="165" min="120" max="200"/>
       					</div>
-      					<!--<input type="submit" data-inline="true" value="提交"/>-->
+      					<input type="submit" data-inline="true" value="提交"/>
     				</form>
 				</div>					
 			</div>
@@ -45,48 +48,11 @@
 				<a href="ladyWeight.html" data-role="button" data-corners="true" data-transition="slide">
 					上一步
 				</a>
-				<a href="all.html" data-role="button" data-corners="true" data-transition="slide">
+				<a href="ladyAll.html" data-role="button" data-corners="true" data-transition="slide">
 	  				下一步
 	  			</a>
 	  		</div>	
 		</div>
 		
-		<div data-role="page" id="man" class="main">
-			<div data-role="content">	
-				<div  class="text">
-					<p>
-		     		我们会根据您的身体资料<br/> 
-		        	优化您的运动算法
-					</p>
-				</div>
-				
-				<div class="ui-grid-a">
-					<div class="ui-block-a">
-						<div class="weight_image" align="center">
-							<img src="../../images/bxy/man.png" />
-						</div>
-					</div>
-					
-					<div class="ui-block-b">
-						<form method="post" action="height.asp">
- 	     					<div data-role="fieldcontain">
-    	    					<label for="points">身高cm:</label>
-        						<input type="range" name="points" id="points" value="165" min="120" max="200"/>
-      						</div>
-      						<!--<input type="submit" data-inline="true" value="提交"/>-->
-    					</form>
-					</div>
-					
-				</div>
-				<div data-role="controlgroup" data-type="horizontal" class="btn">
-					<a href="manWeight.html" data-role="button" data-corners="true" data-transition="slide">
-					上一步
-					</a>
-	  				<a href="all.html" data-role="button" data-corners="true" data-transition="slide">
-	  				下一步
-	  				</a>
-	  			</div>	
-			</div>
-		</div>
 	</body>
 </html>
