--- a/icehockey_ServerV3/WebContent/views/main.html
+++ b/icehockey_ServerV3/WebContent/views/main.html
@@ -3,19 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>主页面</title>
+		<title></title>
 		<link rel="stylesheet" href="../css/pageCss/main.css" />
 		<link rel="stylesheet" href="../css/mui.min.css"/>
 		<script src="../js/mui.min.js"></script>
-		<link rel="stylesheet" href="../css/jqueryMobile/jquery.mobile-1.4.5.min.css"/>
 		<script src="../js/jQuery/jquery-2.2.3.min.js" type="text/javascript"></script>
-		<script src="../js/jqueryMobile/jquery.mobile-1.4.5.min.js"></script>
 		
 	</head>
 	<body>
 		<div class="main_top_pages">
 			<div class="div_schedule active">
-				
 				<!--轮播图,用到了mui-->
 				<div class="carousel">
 					<div class="mui-slider">
@@ -26,7 +23,6 @@
 						 </div>
 					</div>
 				</div>
-				
 				<!--选项卡-->
 				<div class="choose_card_div">
 					<div class="saishizixun">赛事资讯</div>
@@ -37,12 +33,9 @@
 					<div class="my2016">我的2016</div>
 				</div>
 				
-				<!--精彩推荐 -->
 				<div class="recommend_div">
 					精彩推荐
 				</div>
-				
-				
 				<!--内容div-->
 				<div class="content_out_div">
 					<!--左侧div-->
@@ -68,7 +61,7 @@
 								<div class="content_bottom">这是正文内容</div>
 							</div>
 						</div>
-												<div class="content_div">
+							<div class="content_div">
 							<div class="content_img">
 								<img src="../images/login.png"/>
 							</div>
@@ -143,14 +136,14 @@
 							
 						</div>
 					</div>
-				</div>			
+				</div>	 <!-- content out div结束 -->		
             </div>
-            <!-- content out div结束 -->
+            <!-- div schedule actuve结束 -->	
             
              <!-- JQm 的导航页只可以设置五个，当多于5个的时候会分为两列 -->
-            <div class="div_main">
-			</div>
+           
 			<div class="div_game">
+				<sapn>这是赛程页面</sapn>
 			</div>
 			<div class="div_tool">
 				
@@ -201,6 +194,11 @@
 				loadCarousel();
 			}
 		</script>
+		<!--
+        	window.onload是一个事件，
+        	当文档加载完成之后就会触发该事件，可以为此事件注册事件处理函数，
+        	并将要执行的脚本代码放在事件处理函数中，于是就可以避免获取不到对象的情况。
+        -->
 		
 <script src="../js/pageJS/main.js"></script>
 	</body>
