改登陆为登录

--- a/icehockey_ServerV3/WebContent/views/login.html
+++ b/icehockey_ServerV3/WebContent/views/login.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<title>登陆页面</title>
+		<title>登录页面</title>
 		<link rel="stylesheet" href="../css/login/login.css" />
 		<link rel="stylesheet" href="../css/jqueryMobile/jquery.mobile-1.4.5.min.css"/>
 		<script src="../js/jQuery/jquery-2.2.3.min.js"></script>
@@ -52,7 +52,7 @@
 				</div>
 				
 				<div >
-					<input type="submit" data-role='none' value="登陆"   class="submitBtn"></input>
+					<input type="submit" data-role='none' value="登录"   class="submitBtn"></input>
 				</div>
             	     
 			    <div class="errorBtn">
