修复异常提醒

--- a/icehockey_ServerV3/WebContent/views/error.html
+++ b/icehockey_ServerV3/WebContent/views/error.html
@@ -33,7 +33,7 @@
 			<div data-role="content">
 				<div class="error-header">
 					<a href="#" onClick="javascript :history.back(-1);" data-ajax="false"></a>
-					<span>登陆遇到问题</span>
+					<span>登录遇到问题</span>
 				</div>
 			</div>
 			
@@ -44,7 +44,7 @@
 				
 			 <div class="problem" >	
 			 	<div  >
-			 		<input type="radio" data-role='none' name="error"  value="无登陆记录" class="checkboxBtn" checked="checked"/> 无登陆记录
+			 		<input type="radio" data-role='none' name="error"  value="无登录记录" class="checkboxBtn" checked="checked"/> 无登录记录
 			 	</div>
 		  		<div >
 		  			<input type="radio" data-role='none' name="error"  value="手机收不到验证码" class="checkboxBtn" /> 手机收不到验证码
